fix(AppFrame): main nav scrollbar fix for safari

--- a/packages/react-components/src/components/AppFrame/components/SideNavigation/SideNavigation.module.scss
+++ b/packages/react-components/src/components/AppFrame/components/SideNavigation/SideNavigation.module.scss
@@ -51,6 +51,11 @@ $base-class: 'side-navigation';
       width: 4px;
     }
 
+    &::-webkit-scrollbar-thumb {
+      border-radius: 2px;
+      background-color: var(--action-neutral-hover);
+    }
+
     &--no-gaps {
       gap: 0;
     }
